Added new tasks

--- a/CerneTeleso.tex
+++ b/CerneTeleso.tex
@@ -21,26 +21,39 @@
 \subsection{Stefanův-Boltzmannův zákon}
     Odvoďte celkový zářivý výkon černého tělesa o teplotě $T$.
 
-\subsection{Slunce}
-    Je-li Slunce v zenitu, je intenzita slunečního záření dopadající na Zemi $I_{\oplus}=1367\unit{Wm^{-2}}$.
+\subsection{Střední energie fotonu}
+    Určete počet fotonů v jednotkovém objemu pro frekvenci $\nu$ a vlnovou délku $\lambda$ a celkový počet fotonů přes všechny vlnové délky.
+    Jaká je střední energie jednoho fotonu v záření černého tělesa o teplotě $T$?
+
+\subsection{Teplota Slunce}
+    Je-li Slunce v zenitu, je intenzita slunečního záření dopadající na vodorovný zemský povrch $I_{\oplus}=1367\unit{Wm^{-2}}$.
     Za předpokladu, že vyzařování Slunce lze považovat za záření černého tělesa, a znáte-li poloměr Slunce $R_{\odot}$ a vzdálenost Země od Slunce $d$, určete teplotu na povchu Slunce.
 
+\subsection{Ztráta hmotnosti Slunce}
+    Jakou hmotnost ztratí Slunce vyzařováním za $1\unit{s}$?
+
 \subsection{Žárovka}
-    Wolframové vlákno v klasické žárovce se rozžhaví na teplotu $T=4000\unit{K}$.
+    Wolframové vlákno v klasické žárovce se rozžhaví na teplotu $T=3000\unit{K}$.
     Jaké procento vyzařované energie je ve viditelné části spektra mezi vlnovými délkami $\lambda\in[380\unit{nm},750\unit{nm}]$?
 
 \subsection{Hlava}
     Odhadněte celkový zářivý výkon holé lidské hlavy bez pokrývky.
     Jaký je rozdíl zářivého výkonu a zářivého příkonu v prostředí, které má $t_{\text{okolí}}=0\unit{^\circ C}$?
     Bazální metabolismus dospělého člověka je přibližně $P_{B}=1700\unit{kcal\,den^{-1}}$.
-    Určete, jaké procento energie získané metabolismem se v chladném počasí ztratí hlavou vyzařováním.\footnote{
+    Určete, jaké procento energie získané metabolismem se v chladném počasí ztratí hlavou pouhým vyzařováním.\footnote{
         Proto je dobré nosit v zimě čepici.
     }
 
 \subsection{Fotonová plachetnice}
-    Určete, jaká síla by díky slunečnímu záření působila na čtvercovou plachtu o rozměru $100\unit{m}\times 100\unit{m}$, nacházející se ve vzdálenosti Země. 
+    Určete, jaká síla by díky slunečnímu záření působila na čtvercovou plachtu o rozměru $100\unit{m}\times 100\unit{m}$, nacházející se na oběžné dráze Země. 
     Jak musí být plachta orientovaná, aby síla byla co největší?
     Je síla větší, když plachta záření pohltí, nebo když ho odrazí?
 
 \subsection{Vlákno žárovky}
     Odhadněte délku a poloměr wolframového vlákna žárovky s příkonem $P=100\unit{W}$, víte-li, že teplota vlákna je $T=2700\unit{K}$.
+
+\subsection{Kosmické mikrovlnné záření}
+    Kosmické mikrovlnné záření (reliktní záření) je odkaz z počátečních fází vývoje vesmíru.
+    Má charakter přibližně izotropního záření černého tělesa o teplotě $T\approx2\c7\unit{K}$.
+    Určete, na jaké frekvenci a pro jakou vlnovou délku je hustota energie nejvyšší.
+    Spočítejte, kolik fotonů reliktního záření dopadá na jednotkovou plochu zemského povrchu za sekundu.
