--- a/defs.tex
+++ b/defs.tex
@@ -29,6 +29,7 @@
 \def\projector#1{\left|{#1}\middle\rangle\middle\langle{#1}\right|}
 
 \def\unit#1{\,\mathrm{{#1}}}
+\def\c{,\!}
 
 \def\hi#1{^{({#1})}}
 
