Human body radiation task

--- a/CerneTeleso.tex
+++ b/CerneTeleso.tex
@@ -44,10 +44,16 @@
         Proto je dobré nosit v zimě čepici.
     }
 
+\subsection{Tělo}
+    Povrch lidského těla je přibližně $S_{\text{tělo}}\approx2\unit{m^{2}}$.
+    Za předpokladu, že by člověk ztrácel energii pouze vyzařováním, odhadněte, jakou nejmenší teplotu okolí by byl schopen přežít bez oblečení, aniž by zmrzl?
+    
 \subsection{Fotonová plachetnice}
     Určete, jaká síla by díky slunečnímu záření působila na čtvercovou plachtu o rozměru $100\unit{m}\times 100\unit{m}$, nacházející se na oběžné dráze Země. 
     Jak musí být plachta orientovaná, aby síla byla co největší?
     Je síla větší, když plachta záření pohltí, nebo když ho odrazí?
+    Pokud by plachta byla vyrobena z běžného alobalu používaného v domácnosti, jakým zrychlením by se pohybovala?
+    S jakým zrychlením by se pohybovala, pokud by se nacházela těsně nad povrchem Slunce?
 
 \subsection{Vlákno žárovky}
     Odhadněte délku a poloměr wolframového vlákna žárovky s příkonem $P=100\unit{W}$, víte-li, že teplota vlákna je $T=2700\unit{K}$.
