Join encadescent bulb tasks

--- a/CerneTeleso.tex
+++ b/CerneTeleso.tex
@@ -32,10 +32,6 @@
 \subsection{Ztráta hmotnosti Slunce}
     Jakou hmotnost ztratí Slunce vyzařováním za $1\unit{s}$?
 
-\subsection{Žárovka}
-    Wolframové vlákno v klasické žárovce se rozžhaví na teplotu $T=3000\unit{K}$.
-    Jaké procento vyzařované energie je ve viditelné části spektra mezi vlnovými délkami $\lambda\in[380\unit{nm},750\unit{nm}]$?
-
 \subsection{Hlava}
     Odhadněte celkový zářivý výkon holé lidské hlavy bez pokrývky.
     Jaký je rozdíl zářivého výkonu a zářivého příkonu v prostředí, které má $t_{\text{okolí}}=0\unit{^\circ C}$?
@@ -56,7 +52,9 @@
     S jakým zrychlením by se pohybovala, pokud by se nacházela těsně nad povrchem Slunce?
 
 \subsection{Vlákno žárovky}
-    Odhadněte délku a poloměr wolframového vlákna žárovky s příkonem $P=100\unit{W}$, víte-li, že teplota vlákna je $T=2700\unit{K}$.
+    Odhadněte délku a poloměr wolframového vlákna žárovky s příkonem $P=100\unit{W}$ zapojené v české elektrické síti, víte-li, že teplota vlákna je $T=2700\unit{K}$.
+
+    Jaké procento energie vyzařované vláknem je ve viditelné části spektra mezi vlnovými délkami $\lambda\in[380\unit{nm},750\unit{nm}]$?
 
 \subsection{Kosmické mikrovlnné záření}
     Kosmické mikrovlnné záření (reliktní záření) je odkaz z počátečních fází vývoje vesmíru.
