--- a/CerneTeleso.tex
+++ b/CerneTeleso.tex
@@ -7,7 +7,7 @@
     Odvoďte objemovou hustotu energie černého tělesa za předpokladu, že energie jednotlivých energie módů elektromagnetického záření může nabývat jen celočíselných násobků frekvence módů $\nu$,\footnote{
         Vztah lze ekvivalentně zapsat pomocí úhlové frekvence $\omega$ a redukované Planckovy konstanty $\hbar$ jako
         \begin{equation}
-            E_{n}=\hbar\omega n
+            E_{n}=\hbar\omega n.
         \end{equation}
     }
     \begin{equation*}
