--- a/GZK.tex
+++ b/GZK.tex
@@ -1,13 +1,14 @@
 \section{Práh reakce}
 \subsection{Greisenův-Zatsepinův-Kuzminův limit}
-    GZK limit je prahová hodnota energie kosmického protonového záření, nad kterou dojde k interakci protonu s fotonem reliktního záření za vzniku buď protonu a neutrálního pionu, nebo neutronu a kladně nabitého pionu:\footnote{
+    GZK limit je prahová hodnota energie kosmického protonového záření, nad kterou dojde k interakci protonu s fotonem reliktního záření za vzniku buď protonu a neutrálního pionu, nebo neutronu a kladně nabitého pionu,\footnote{
         K reakci dochází přes $\Delta^{+}$ rezonanci.
     }
     \begin{subequations}
         \begin{align}
             p^{+}+\gamma_{\mathrm{RZ}}
                 &\longrightarrow p^{+}+\pi^{0},\\
-                &\longrightarrow n^{0}+\pi^{+}.
+                &\longrightarrow n^{0}+\pi^{+},
         \end{align}        
     \end{subequations}
+    čímž vysokonenergetický foton ztratí energii (je zbržděn).
     Odbvoďte tento limit pro obě reakce.
