--- a/Vodik.tex
+++ b/Vodik.tex
@@ -27,23 +27,4 @@
     Určete stupeň degenerace (počet různých kombinací kvantových čísel, kterými lze získat danou energetickou hladinu) hladiny atomu vodíku s hlavním kvantovým číslem $n$.
 
 \subsection{Poloměr atomu vodíku}
-    Ze znalosti radiální části vlnové funkce základního stavu atomu vodíku určete střední poloměr atomu.
-
-\subsection{Mnohaelektronový atom}
-    Na základě jednoduchého Bohrova modelu atomu odhadněte rozměr atomu s protonovým číslem~$Z$.
-
-    \begin{enumerate}
-    \item
-        Jaký je poloměr kruhové dráhy elektronu v Bohrově modelu, pokud jádro nese náboj $Ze$ a hladina má kvantové číslo $n$?
-        Vyjádřete v násobcích Bohrova poloměru $a_{0}$ pro atom vodíku.
-
-    \item
-        Předpokládejte, atomové jádro s nábojem $Ze$ doplníte $Z$ elektrony, které mezi sebou navzájem neinteragují, a zanedbejte i spin-orbitální vazbu a další případné interakce.
-        Jaký bude poloměr výsledného atomu v případě, že je ve valenční slupce jen jeden elektron, a v případě, že je valenční slupka zcela zaplněna?
-        Budou atomy větší, nebo menší v porovnání s atomem vodíku?
-    \end{enumerate}
-
-    K výpočtu použijte vzorec
-    \begin{equation}
-        \sum_{n=1}^{N}n^{2}=\frac{N}{6}(N+1)(2N+1).
-    \end{equation}
+    Ze znalosti radiální části vlnové funkce základního stavu atomu vodíku určete vzdálenost od středu jádra, na které najdete elektron nejpravděpodobněji, a střední poloměr atomu (střední hodnotu polohy).
