Lepší popis zadání. Drobná rozšíření.

--- a/NerozlisitelneCastice.tex
+++ b/NerozlisitelneCastice.tex
@@ -1,17 +1,18 @@
 \section{Nerozlišitelné částice}
     \subsection{Kvantový tlak}
         Určete střední energii jedné částice nerelativistického fermionového plynu o hustotě počtu částic $\rho$.
-        Určete, jaký je v tomto plynu tlak.
+        Určete, jaký je v tomto plynu tlak za předpokladu, že termodynamickou teplotu lze zanedbat.
 
     \subsection{Relativistický kvantový tlak}
         Zopakujte řešení předchozí úlohy pro ultrarelativistický fermionový plyn (rychlosti částic plynu jsou tak velké, že lze zanedbat jejich klidovou hmotnost).
 
     \subsection{Poloměr hvězdy}
         Odhadněte poloměr vyhořelé hvězdy (bílého trpaslíka) s hmotností $M$.
-        Předpokládejte, že hvězda je složena z uhlíků $^{12}$C.
+        Předpokládejte, že hvězda je složena z uhlíků $^{12}$C a je homogenní (její hustota je konstantní, nezávislá na vzdálenosti od středu hvězdy).
+        Spočítejte číselně pro $M=M_{\odot}$ (poloměr vyhořelého Slunce).
 
     \subsection{Chandrasekharova mez}
-        Odhadněte Chandrasekharovu mez pro bílého trpaslíka (jedná se o mezní hmotnost, nad kterou již kvantový tlak neudrží hvězdu proti gravitační síle a hvězda se zhroutí do neutronové hvězdy nebo černé díry).
+        Odhadněte Chandrasekharovu mez pro bílého trpaslíka (jedná se o mezní hmotnost, nad kterou již kvantový tlak elektronového plynu neudrží hvězdu proti gravitační síle a hvězda se zhroutí do neutronové hvězdy nebo černé díry).
 
     \subsection{Interakce způsobená nerozlišitelností volných částic}
         Uvažujte dvě nerozlišitelné volné částice o hmotnosti $m$ pohybující se na přímce.
@@ -42,4 +43,6 @@
                     F\equiv-\frac{\partial E}{\partial b}.
                 \end{equation}
                 Bude tato síla přitažlivá nebo odpudivá a jak závisí na symetrii vlnové funkce?
+
+            \item Určete jednočásticovou hustotu pravděpodobnosti, že nalezneme částici v bodě $x$.
         \end{enumerate}
