Drobné opravy a doplnění

--- a/Compton.tex
+++ b/Compton.tex
@@ -1,4 +1,4 @@
-\section{Comptonův jev}
+\section{Částicový charakter elektromagnetického záření}
     \subsection{Comptonův rozptyl}
         Odvoďte vztah pro energii fotonu $E'_{\gamma}$ a jeho vlnovou délku $\lambda'$, který se rozptýlil na elektronu na úhel $\theta$ (obrázek~\ref{fig:Compton}).
         Energie a vlnová délka fotonu před rozptylem je $E_{\gamma}$ a $\lambda$.
