--- a/GZK.tex
+++ b/GZK.tex
@@ -12,3 +12,12 @@
     \end{subequations}
     čímž vysokonenergetický foton ztratí energii (je zbržděn).
     Odbvoďte tento limit pro obě reakce.
+
+\subsection{Vznik elektron-pozitronového páru}
+    Určete, jakou energii musí mít foton, aby mohl způsobit vznik páru elektron-positron.
+    Proč k uvedené reakci nejsnáze dochází v pevných látkách?
+    Je možné, aby elektron-pozitronový pár vznikl při lékařském rentgenu?
+
+\subsection{Fotoefekt}
+    Vysvětlete, proč nemůže foton odevzdat veškerou svou energii a hybnost volnému elektronu.
+    K fotoelektrickému jevu tedy může dojít jen tehdy, když foton zainteraguje s vázaným elektronem.
