--- a/Molekuly.tex
+++ b/Molekuly.tex
@@ -12,10 +12,10 @@
         \begin{equation}
             \Delta H_{f}^{\Theta}(\ce{CO2})=-393\unit{kJ}\unit{mol^{-1}}.
         \end{equation}
-        O kolik je důsledkem relativistického vztahu mezi hmotností a energií vzniklý oxid uhličitý lehčí než jsou hmotnosti konstituentů před reakcí?
+        O kolik je důsledkem relativistického vztahu mezi hmotností a energií vzniklý oxid uhličitý lehčí, než jsou hmotnosti konstituentů před reakcí?
 
     \subsection{Hustoty látek}
-        Odhadněte rozmezí hustot plynů a pevných látek.
+        Odhadněte rozmezí hustot kapalin a pevných látek.
 
     \subsection{Odhadněte výšku hor}
         Předpokládejte, že hory jsou tvořeny křemenem (oxidem křemičitým \ce{SiO2}).
