--- a/NerozlisitelneCastice.tex
+++ b/NerozlisitelneCastice.tex
@@ -31,18 +31,18 @@
             \item 
                 Určete vlnovou funkci $\psi(x_{1},x_{2})$ systému těchto dvou nerozlišitelných částic a spočítejte její normalizaci.
                 Vlnové funkce mohou být symetrické (bosony, fermiony s antisymetrickým spinovým stavem) nebo antisymetrické (fermiony se symetrickým spinovým stavem). 
-                Uvažujte oba dva případy.
+                Uvažujte oba dva případy výměnné symetrie.
             
             \item Spočítejte střední hodnotu energie systému dvou nerozlišitelných částic
                 \begin{equation}
-                    E=\matrixelement{\psi}{\operator{H}}{\psi}=\int\psi^{*}(x_{1},x_{2})H\psi(x_{1},x_{2})\d x_{1}\d x_{2}.
+                    E=\matrixelement{\psi}{\operator{H}}{\psi}=\int\psi^{*}(x_{1},x_{2})\operator{H}\psi(x_{1},x_{2})\d x_{1}\d x_{2}.
                 \end{equation}
 
             \item Spočítejte efektivní sílu
                 \begin{equation}
                     F\equiv-\frac{\partial E}{\partial b}.
                 \end{equation}
-                Bude tato síla přitažlivá nebo odpudivá a jak závisí na symetrii vlnové funkce?
+                Bude tato síla přitažlivá nebo odpudivá a jak bude záviset na symetrii vlnové funkce?
 
-            \item Určete jednočásticovou hustotu pravděpodobnosti, že nalezneme částici v bodě $x$.
+            \item Určete jednočásticovou hustotu pravděpodobnosti, že nalezneme částici v bodě $x$, a porovnejte ji s hustotou pravděpodobnosti pro rozlišitelné částice.
         \end{enumerate}
