--- a/Rozptyl.tex
+++ b/Rozptyl.tex
@@ -15,6 +15,10 @@
 
     Odvoďte výraz pro diferenciální účinný průřez.
 
+\subsection{Poloměr atomu}
+    Geiger a Marsden při provádění experimentu, který vedl Rutherforda k formulování modelu atomu s atomovým jádrem, používali rozptyl $\alpha$ částic získaných z izotopu $^{222}\mathrm{Ra}$ s kinetickou energií $T=5\c6\unit{MeV}$.
+    Pokud na fólii zlata došlo ke zpětnému rozptylu, co to říkalo o poloměru atomového jádra?
+
 \subsection{Rozptyl na tvrdé kouli}
     \begin{enumerate}
         \item Odvoďte vztah mezi srážkovým parametrem a rozptylem na úhel $\theta$ pro tvrdou kouli.
