--- a/Vodik.tex
+++ b/Vodik.tex
@@ -1,16 +1,24 @@
 \section{Atom vodíku}
+\subsection{Klasický atom vodíku}
+    Spočítejte frekvenci kruhového pohybu elektronu v klasickém modelu vodíkového atomu (elektron se nachází ve vzdálenosti Bohrova poloměru $a_{0}$ od atomového jádra).
+    Pokud by elektron vyzařoval elektromagnetické záření o této frekvenci, v jaké oblasti spektra by se nacházelo?
+
 \subsection{Nestabilita klasického atomu}
     Nabitá částice s nábojem $q$ pohybující se se zrychlením $a$ vyzařuje podle klasické teorie elektromagnetického záření s výkonem
     \begin{equation}
         P=\frac{2}{3}\frac{q^2}{4\pi\epsilon}\frac{1}{c^3}a^{2},
     \end{equation}
-    kde $\epsilon$ je permitivita a $c$ je rychlost světla.
-    Spočítejte, za jak dlouho by dopadl elektron atomu vodíku na jádro, kdyby se pohyboval jako klasická nabitá částice z kruhové dráhy o poloměru daném Bohrovým poloměrem.
+    kde $\epsilon$ je permitivita a $c$ je rychlost světla.\footnote{Vztah lze najít pod názvem \emph{Larmorův vztah}. Záření se nazývá podle charakteru zrychlení \emph{synchrotronové záření} nebo \emph{brzdné záření}.}
 
-    Určete průměrný vyzařovaný výkon.
+    \begin{itemize}
+        \item
+            Pokud by se elektron v atomu vodíku choval jako klasická nabitá částice, spočítejte, za jak dlouho by dopadl na jádro z kruhové dráhy o poloměru daném Bohrovým poloměrem.
+        \item
+            Určete průměrný vyzařovaný výkon.
+    \end{itemize}
 
 \subsection{Bohrův model atomu}
-    Odvoďte možné hodnoty energií elektronu atomu vodíku za Bohrova předpokladu, že elektron obíhá okolo atomového jádra a že pokud jeho moment hybnosti nabývá celočíselných násobků redukované Planckovy konstanty $\hbar$, nedochází ke zrátě energie Larmorovým vyzařováním.
+    Odvoďte možné hodnoty energií elektronu atomu vodíku za Bohrova předpokladu, že elektron obíhá okolo atomového jádra díky elektrostatické síle mezi ním a protonem v jádře a že pokud jeho moment hybnosti nabývá celočíselných násobků redukované Planckovy konstanty $\hbar$, nedochází ke zrátě energie Larmorovým vyzařováním.
 
     Jak se změní výsledek, pokud bude mít jádro náboj $Ze$, $Z>1$?
 
