--- a/NerozlisitelneCastice.tex
+++ b/NerozlisitelneCastice.tex
@@ -46,3 +46,28 @@
 
             \item Určete jednočásticovou hustotu pravděpodobnosti, že nalezneme částici v bodě $x$, a porovnejte ji s hustotou pravděpodobnosti pro rozlišitelné částice.
         \end{enumerate}
+
+\subsection{Helium}
+    \begin{enumerate}
+        \item
+            Napište Hamiltonián pro elektronový obal atomu helia.
+            Uvažujte, že atomové jádro je bodová částice mnohem těžší než elektronový obal a zanedbejte jaderné pohyby a spin-orbitální interakci.
+            Elektrony jsou nerozlišitelné fermiony se spinem $1/2$.
+
+        \item
+            V nultém přiblížení zanedbejte vzájemnou interakci obou elektronů a určete základní stav a první excitovaný stav atomu helia (energie a vlnové funkce).
+            V základním stavu bude spinový stav singletní (parahelium) nebo tripletní (ortohelium)?
+
+        \item
+            V prvním přiblížení uvažujte vzájemnou interakci obou elektronů jako poruchu.
+            Určete opravu k energii, která se spočítá jako střední hodnota interakčního členu z Hamiltoniánu pro systém ve stavu popsaném vlnovými funkcemi z předchozího bodu.
+    \end{enumerate}
+
+    \subsection{Pozitronium}
+        Pozitronium je vázaný systém elektronu a pozitronu.\footnote{Až na výjimky je každé \emph{-onium} vázaný systém částice a své antičástice.}
+        Určete jeho poloměr a energetické spektrum a porovnejte se spektrem atomu vodíku.
+
+        \emph{Poznámka:} Spin elektronu a pozitronu se opět složí na singletní $^{1}\mathrm{S}_{0}$ stav (parapozitronium) a tripletní $^{3}\mathrm{S}_{1}$ stav (ortopozitronium).
+        Parapozitronium se rozpadá do sudého počtu fotonů, a má tedy mnohem kratší dobu života, $\tau_{0}\approx0\c12\unit{\mu s}$.
+        Ortopozitronium má sice energii základního stavu o zhruba $1\unit{meV}$ výše než parapozitronium, ale rozpadá se do lichého počtu fotonů s dobou života více jak tisíckrát delší, $\tau_{1}\approx140\unit{\mu s}$.
+
