--- a/Provazanost.tex
+++ b/Provazanost.tex
@@ -7,7 +7,7 @@
         \begin{equation}
             \ket{\Psi}=\frac{1}{\sqrt{2}}\left(\ket{\uparrow}_{1}\ket{\uparrow}_{2}+\ket{\downarrow}_{1}\ket{\downarrow}_{2}\right)
         \end{equation}
-        nelze separovat, tj. nelze ho napsat ve tvaru
+        nelze faktorizovat, tj. nelze ho napsat ve tvaru
         \begin{equation}
             \left(\alpha\ket{\uparrow}+\beta\ket{\downarrow}\right)_{1}\left(\gamma\ket{\uparrow}+\delta\ket{\downarrow}\right)_{2},\quad\alpha,\beta,\gamma,\delta\in\mathbb{C}.
         \end{equation}
