--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -139,7 +139,7 @@
 \input{Molekuly}\np
 \input{NerozlisitelneCastice}\np
 \input{Provazanost}\np
-%\input{Vzorecky}\np
+\input{Vzorecky}\np
 
 \printindex
 
