--- a/defs.tex
+++ b/defs.tex
@@ -15,7 +15,7 @@
 \DeclareMathOperator{\Bi}{Bi}
 \DeclareMathOperator{\Tp}{\mathsf{T}}
 
-\renewcommand{\d}{\mathrm{d}}
+\renewcommand{\d}{\,\mathrm{d}}
 \newcommand{\D}{\mathcal{D}}
 
 \def\O#1{\mathcal{O}\left({#1}\right)}
