Provázanost dvou qubitů

--- a/Provazanost.tex
+++ b/Provazanost.tex
@@ -11,3 +11,13 @@
         \begin{equation}
             \left(\alpha\ket{\uparrow}+\beta\ket{\downarrow}\right)_{1}\left(\gamma\ket{\uparrow}+\delta\ket{\downarrow}\right)_{2},\quad\alpha,\beta,\gamma,\delta\in\mathbb{C}.
         \end{equation}
+
+    \subsection{Stav dvouqubitového systému}
+        Rozhodněte, zda stav dvou qubitů
+        \begin{equation}
+    \ket{\Phi}=\mathcal{N}\left(2\ket{\uparrow\uparrow}+\im\ket{\downarrow\uparrow}+4\im\ket{\uparrow\downarrow}-2\ket{\downarrow\downarrow}\right)
+        \end{equation}
+        je provázaný, a svou odpověď zdůvodněte. 
+        Nalezněte normalizační faktor $\mathcal{N}$.
+
+        V zápisu stavu je použito zjednodušeného značení $\ket{\uparrow\downarrow}\equiv\ket{\uparrow}_{1}\otimes\ket{\downarrow}_{2}$ (analogicky i pro ostatní kombinace spinu nahoru a dolů).
