Pár dalších vzorečků

--- a/Vzorecky.tex
+++ b/Vzorecky.tex
@@ -23,6 +23,11 @@
             M&=\sigma T^{4} & \sigma&=\frac{2\pi^{5}k_{B}^{4}}{15h^{3}c^{2}}\approx 5\c67\cdot10^{-8}\unit{Wm^{-2}K^{-4}}
         \end{align}
 
+    \item Vztah mezi energií $E$, vlnovou délkou $\lambda$ a frekvencí $\nu$ kvant elektromagnetického záření
+        \begin{equation}
+            E=h\nu=\frac{hc}{\lambda}
+        \end{equation}
+
     \item Comptonův rozptyl
         \begin{align}
             \lambda'-\lambda&=\lambda_{c}\left(1-\cos\theta\right) & \lambda_{c}&=\frac{h}{m_{e}c}
@@ -39,14 +44,19 @@
             E_{n}=R_{\infty}\frac{m}{m_{e}}Z^{2}\frac{1}{n^{2}}
         \end{equation}
 
+    \item Relativistický vztah mezi energií $E$ a hybností $p$
+        \begin{equation}
+            E^{2}=\left(Mc^{2}\right)^{2}=\left(M_{0}c^{2}\right)^{2}+\left(pc\right)^{2}
+        \end{equation}
+
 \end{itemize}
 
 \subsection{Konstanty}
 \begin{itemize}
     \item Planckova konstanta
         \begin{align}
-            h&=6\c63\cdot 10^{-34}\unit{Js}\\
-            \hbar&\equiv\frac{h}{2\pi}=1\c05\cdot 10^{-34}\unit{Js}.
+            h&\approx6\c63\cdot 10^{-34}\unit{Js}\\
+            \hbar&\equiv\frac{h}{2\pi}\approx1\c05\cdot 10^{-34}\unit{Js}.
         \end{align}
 
     \item Rychlost světla ve vakuu
@@ -81,11 +91,16 @@
 
     \item Boltzmannova konstanta
         \begin{equation}
-            k_{B}=1\c38\cdot10^{-23}\unit{\frac{J}{K}}
+            k_{B}\approx1\c38\cdot10^{-23}\unit{\frac{J}{K}}
         \end{equation}
 
     \item Termodynamická teplota
         \begin{equation}
-            T(0\unit{^{\circ}C})=273\c15\unit{K}
+            T(0\unit{^{\circ}C})\approx273\c15\unit{K}
+        \end{equation}
+
+    \item Avogadrova konstanta
+        \begin{equation}
+            N_{A}\approx6\c023\cdot10^{23}\unit{mol^{-1}}
         \end{equation}
 \end{itemize}
