--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -128,6 +128,8 @@
 	\item Arthur Beiser, {\it Úvod do moderní fyziky} (Academia Praha, 1975) - přeloženo z anglického originálu {\it Perspectives of Modern Physics} (McGraw-Hill, New York, 1969).
 	
 	\item Paul Ewart, {\it Atomic Physics} (Morgan \& Claypool Publishers, 2019).
+	
+	\item Gordon W.F. Drake, {\it Springer Handbook of Atomic, Molecular, and Optical Physics} (Springer Nature Switzerland AG, 2023).
 \end{itemize}
 
 \input{CerneTeleso}\np
