Polovodičový detektor úkol

--- a/Compton.tex
+++ b/Compton.tex
@@ -32,4 +32,4 @@
         Vysvětlete body a, b, c z obrázku~\ref{fig:ComptonSpectrum}; obrázek zobrazuje četnost, se kterou byla detektorem naměřena energie elektronu $E$. 
         Odhadněte, jaká byla energie $E_{\gamma}$, a z této \href{https://cds.cern.ch/record/1309915/files/978-3-642-02586-0_BookBackMatter.pdf}{tabulky} určete nuklid, jehož rozpad je měřen.
 
-        % Zdroj tabulky: https://www.ld-didactic.de/software/524221en/Content/Appendix/ComptonSpectrum.htm
+        % Zdroj obrázku: https://www.ld-didactic.de/software/524221en/Content/Appendix/ComptonSpectrum.htm
