--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -175,6 +175,7 @@
 	
 \begin{homework}
 	\setcounter{figure}{0}
+	\pagestyle{empty}
 	\exercise[23.10.2023]{Polovodičový detektor $\gamma$ záření}
 	K detekci ionizujícího záření se používají polovodičové detektory.
 	Budeme předpokládat, že na detektor dopadá monochromatické záření s energií kvant $E_{\gamma}$ vzniklé rozpadem radioaktivního nuklidu.
@@ -222,6 +223,22 @@
 	\newpage
 \end{homework}
 
+\begin{homework}
+	\exercise{Rutherfordův rozptyl}
+    Protony vylétávají z urychlovače s kinetickou energií $T=200\,\mathrm{MeV}$, dopadají na velmi tenkou hliníkovou fólii o tloušťce $t=100\unit{nm}$ a dochází k rozptylu.
+    Svazek má tok $\Phi=10^{9}$ protonů za sekundu.
+	Hustota hliníku je $\rho=2710\unit{kg}\unit{m^{-3}}$.
+
+    \begin{itemize}
+        \item Určete diferenciální účinný průřez Rutherfordova rozptylu protonů na úhel $\theta=30^{\mathrm{o}}$.
+        \item Spočítejte celkový účinný průřez na úhly větší než $\theta_0>180^{\mathrm{o}}$.
+        \item Vyjádřete tloušťku fólie v počtu atomů hliníku.
+        \item Kolik protonů za sekundu se rozptýlí na úhly větší než $\theta_0$?
+    \end{itemize}
+
+\newpage
+\end{homework}
+	
 \printindex
 
 %\bibliography{Z:/Share/Fyzika/Bibliography/References.bib}
