6. domácí úkol a radiální vlnové funkce

--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -224,14 +224,14 @@
 \end{homework}
 
 \begin{homework}
-	\exercise{Rutherfordův rozptyl}
+	\exercise[30.10.2023]{Rutherfordův rozptyl}
     Protony vylétávají z urychlovače s kinetickou energií $T=200\,\mathrm{MeV}$, dopadají na velmi tenkou hliníkovou fólii o tloušťce $t=100\unit{nm}$ a dochází k rozptylu.
     Svazek má tok $\Phi=10^{9}$ protonů za sekundu.
 	Hustota hliníku je $\rho=2710\unit{kg}\unit{m^{-3}}$.
 
     \begin{itemize}
         \item Určete diferenciální účinný průřez Rutherfordova rozptylu protonů na úhel $\theta=30^{\mathrm{o}}$.
-        \item Spočítejte celkový účinný průřez na úhly větší než $\theta_0>180^{\mathrm{o}}$.
+        \item Spočítejte celkový účinný průřez na úhly větší než $\theta_0=90^{\mathrm{o}}$.
         \item Vyjádřete tloušťku fólie v počtu atomů hliníku.
         \item Kolik protonů za sekundu se rozptýlí na úhly větší než $\theta_0$?
     \end{itemize}
@@ -239,6 +239,47 @@
 \newpage
 \end{homework}
 	
+\begin{homework}
+	\exercise[6.11.2023]{Klasický model vodíku}
+	\begin{itemize}
+		\item     
+			Spočítejte frekvenci kruhového pohybu elektronu v klasickém modelu vodíkového atomu (elektron se nachází ve vzdálenosti Bohrova poloměru $a_{0}$ od atomového jádra).
+			Výsledný vztah vyjádřete pomocí konstanty jemné struktury $\alpha$.
+		\item
+			Pokud by elektron vyzařoval elektromagnetické záření o této frekvenci, jaké by mělo vlnovou délku a v jaké oblasti spektra by se nacházelo?
+		\item
+			Jak daleko od protonu by elektron musel být, aby obíhal s frekvencí $f=1\unit{s^{-1}}$?
+	\end{itemize}
+
+\newpage
+\end{homework}
+
+\begin{homework}
+	\exercise{Rozměr vzbuzeného vodíku}
+		Vodík se nachází ve vzbuzeném $2s$ stavu.
+		Jeho radiální část vlnové funkce je tedy
+		\begin{equation*}
+			R_{20}(r)=2\left(\frac{1}{2a_{0}}\right)^{\frac{3}{2}}\left(1-\frac{r}{2a_{0}}\right)\e^{-\frac{r}{2a_0}}.
+		\end{equation*}
+
+		\begin{enumerate}
+			\item
+				Nalezněte vzdálenost $r_{p}$ od jádra, na které naměříte elektron s největší pravděpodobností.
+			\item
+				Určete střední poloměr atomu (střední hodnotu vzdálenost $\langle r\rangle$ od jádra, na které naměříte elektron).
+			\item
+				Jak se změní měřený rozměr atomu, pokud se vodík bude nacházet ve $2p$ stavu, jehož radiální část vlnové funkce zní
+				\begin{equation*}
+					R_{21}(r)=\frac{1}{\sqrt{3}}\left(\frac{1}{2a_{0}}\right)^{\frac{3}{2}}\frac{r}{a_{0}}\e^{-\frac{r}{2a_{0}}}?
+				\end{equation*}
+			\item
+				Jaká bude vlnová délka vyzářeného fotonu, když elektron spadne do základního stavu?
+				Bude možné tento přechod pozorovat pouhým okem?
+		\end{enumerate}
+
+		\newpage
+\end{homework}
+
 \printindex
 
 %\bibliography{Z:/Share/Fyzika/Bibliography/References.bib}
