--- a/Vodik.tex
+++ b/Vodik.tex
@@ -3,6 +3,8 @@
     Spočítejte frekvenci kruhového pohybu elektronu v klasickém modelu vodíkového atomu (elektron se nachází ve vzdálenosti Bohrova poloměru $a_{0}$ od atomového jádra).
     Pokud by elektron vyzařoval elektromagnetické záření o této frekvenci, v jaké oblasti spektra by se nacházelo?
 
+% Beiser 5.10 (strana 134)
+
 \subsection{Nestabilita klasického atomu}
     Nabitá částice s nábojem $q$ pohybující se se zrychlením $a$ vyzařuje podle klasické teorie elektromagnetického záření s výkonem
     \begin{equation}
