--- a/Vzorecky.tex
+++ b/Vzorecky.tex
@@ -104,3 +104,16 @@
             N_{A}\approx6\c023\cdot10^{23}\unit{mol^{-1}}
         \end{equation}
 \end{itemize}
+
+\subsection{Jednoelektronový atom}
+\begin{itemize}
+    \item Radiální vlnové funkce ($Z$ je náboj jádra v jednotkách $e$)
+        \begin{align}
+            R_{10}(r)&=2\left(\frac{Z}{a_{0}}\right)^{\frac{3}{2}}\e^{-\frac{Zr}{a_{0}}}\\
+            R_{20}(r)&=2\left(\frac{Z}{2a_{0}}\right)^{\frac{3}{2}}\left(1-\frac{Zr}{2a_{0}}\right)\e^{-\frac{Zr}{2a_{0}}}\\
+            R_{21}(r)&=\frac{1}{\sqrt{3}}\left(\frac{Z}{2a_{0}}\right)^{\frac{3}{2}}\left(\frac{Zr}{a_{0}}\right)\e^{-\frac{Zr}{2a_{0}}}\\
+            R_{30}(r)&=2\left(\frac{Z}{3a_{0}}\right)^{\frac{3}{2}}\left(1-\frac{2Zr}{3a_{0}}+\frac{2Z^{2}r^{2}}{27a_{0}^{2}}\right)\e^{-\frac{Zr}{3a_{0}}}\\
+            R_{31}(r)&=\frac{4\sqrt{2}}{3}\left(\frac{Z}{3a_{0}}\right)^{\frac{3}{2}}\left(\frac{Zr}{a_{0}}\right)\left(1-\frac{Zr}{6a_{0}}\right)\e^{-\frac{Zr}{3a_{0}}}\\
+            R_{32}(r)&=\frac{2\sqrt{2}}{27\sqrt{5}}\left(\frac{Z}{3a_{0}}\right)^{\frac{3}{2}}\left(\frac{Zr}{a_{0}}\right)^{2}\e^{-\frac{Zr}{3a_{0}}}
+        \end{align}
+\end{itemize}
